--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase-admin": "^9.5.0",
     "glob": "^7.1.6",
     "mongoose": "^5.12.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "validator": "^13.5.2"
   }
 }
