--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,10 @@ services:
       - FIREBASE_TOKEN_URI
       - FIREBASE_AUTH_PROVIDER_x509_CERT_URL
       - FIREBASE_CLIENT_x509_CERT_URL
+      - AWS_ACCESS_KEY_ID
+      - AWS_SECRET_ACCESS_KEY
+      - AWS_S3_BUCKET
+      - AWS_S3_BUCKET_ENDPOINT
     depends_on:
       - db
     networks:
