--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
   },
   "homepage": "https://github.com/kalpasin/express-service-template#readme",
   "dependencies": {
+    "aws-sdk": "^2.888.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "firebase-admin": "^9.5.0",
     "glob": "^7.1.6",
     "mongoose": "^5.12.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "validator": "^13.5.2"
   }
 }
