--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/kalpasin/express-service-template#readme",
   "dependencies": {
+    "@aws-sdk/s3-request-presigner": "^3.13.0",
     "aws-sdk": "^2.888.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
