--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
+    "swagger-ui-express": "^4.1.6",
     "validator": "^13.5.2"
   }
 }
